# audio2anki

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  docs.yml
audio2anki/: anki.py  audio_utils.py  config.py  main.py  pipeline.py  transcoder.py  transcribe.py  translate.py  voice_isolation.py
audio2anki/resources/: import_to_anki.sh
docs/: cli.md  implementation_plan.md  pipeline_design_spec.md  spec.md  speechbrain-migration.md
docs/issues/: 001-audio-cleaning-flags.md
src/audio2anki/: anki.py  artifact_cache.py  audio.py  audio_utils.py  cache.py  cli.py  config.py  main.py  models.py  pipeline.py  transcoder.py  transcribe.py  translate.py  types.py  utils.py  voice_isolation.py
src/audio2anki/resources/: import_to_anki.sh
src/audio2anki/stubs/: deepl.pyi  gradio_client.pyi  pydub.pyi
src/audio2anki/voice_isolation/: speechbrain_impl.py
stubs/: librosa.pyi  soundfile.pyi
tests/: conftest.py  test_anki.py  test_audio.py  test_audio_utils.py  test_cache.py  test_cli.py  test_config.py  test_output_path.py  test_pipeline.py  test_transcoder.py  test_transcribe.py  test_translate.py  test_voice_isolation.py
