[project]
name = "audio2anki"
version = "0.1.0"
description = "Convert audio and video files into Anki flashcard decks with translations"
authors = [{ name = "Oliver Steele", email = "steele@osteele.com" }]
dependencies = [
    "click>=8.1.7",
    "numpy>=1.26.3",
    "openai>=1.6.1",
    "pydub>=0.25.1",
    "rich>=13.7.0",
    "soundfile>=0.12.1",
    "speechbrain>=1.0.0",
    "torch>=2.1.2",
    "torchaudio>=2.1.2",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.1.9",
    "pyright>=1.1.392.post0",
    "pytest>=7.4.4",
    "pydub-stubs>=0.25.1.5",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src"]
extend-include = ["*.pyi"]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["audio2anki"]

[project.scripts]
audio2anki = "audio2anki.cli:main"

[tool.pytest.ini_options]
addopts = "-ra -q"
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning",
    'ignore:invalid escape sequence.*:DeprecationWarning',
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
]
